2008-10-10  David Hyatt  <hyatt@apple.com>

        Make the track pieces of a scrollbar extend under the thumb (each gets half the thumb).

        Reviewed by Tim Hatcher

        * platform/ScrollbarThemeComposite.cpp:
        (WebCore::ScrollbarThemeComposite::hitTest):
        (WebCore::ScrollbarThemeComposite::splitTrack):

2008-10-10  David Hyatt  <hyatt@apple.com>

        Make sure specialized ::scrollbar rules are still triggering custom scrollbar creation.

        Reviewed by Tim Hatcher

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::createScrollbar):
        * rendering/RenderScrollbar.cpp:
        (WebCore::RenderScrollbar::createCustomScrollbar):
        (WebCore::RenderScrollbar::RenderScrollbar):
        (WebCore::RenderScrollbar::setParent):
        (WebCore::RenderScrollbar::updateScrollbarParts):
        (WebCore::RenderScrollbar::updateScrollbarPart):
        * rendering/RenderScrollbar.h:
        * rendering/style/RenderStyle.h:
        (WebCore::RenderStyle::):

2008-10-10  David Hyatt  <hyatt@apple.com>

        Make sure scrollbar background images cause proper part invalidation to occur.

        Reviewed by Tim Hatcher

        * rendering/RenderScrollbar.cpp:
        (WebCore::RenderScrollbar::setHoveredPart):
        (WebCore::RenderScrollbar::setPressedPart):
        * rendering/RenderScrollbarPart.cpp:
        (WebCore::RenderScrollbarPart::styleDidChange):
        (WebCore::RenderScrollbarPart::imageChanged):
        * rendering/RenderScrollbarPart.h:

2008-10-10  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=21538
        
        The blendFunc() for TransformOperations should never mess with the
        operation lists by replacing some ops with identity, otherwise the lists
        no longer match and transitions break.

        Test: transitions/matched-transform-functions.html

        * page/animation/AnimationBase.cpp: