@@ -138,12 +138,10 @@ bool ScrollbarThemeComposite::paint(Scrollbar* scrollbar, GraphicsContext* graph
         paintButton(graphicsContext, scrollbar, forwardButtonEndPaintRect, ForwardButtonEndPart);
     
     // Paint the track background.
-    if ((scrollMask & ForwardTrackPart) || (scrollMask & BackTrackPart) || (scrollMask && ThumbPart))
+    if ((scrollMask & ForwardTrackPart) || (scrollMask & BackTrackPart)) {
         paintTrackBackground(graphicsContext, scrollbar, trackPaintRect);
     
-    // Paint the track pieces above and below the thumb.
-    if ((scrollMask & ForwardTrackPart) || (scrollMask & BackTrackPart)) {
-        
+        // Paint the track pieces above and below the thumb.
         if (scrollMask & BackTrackPart)
             paintTrackPiece(graphicsContext, scrollbar, startTrackRect, BackTrackPart);
         if (scrollMask & ForwardTrackPart)
@@ -235,7 +233,7 @@ void ScrollbarThemeComposite::splitTrack(Scrollbar* scrollbar, const IntRect& tr
     } else {
         thumbRect = IntRect(trackRect.x() + (trackRect.width() - thickness) / 2, trackRect.y() + thumbPos, thickness, thumbLength(scrollbar));
         beforeThumbRect = IntRect(trackRect.x(), trackRect.y(), trackRect.width(), thumbPos + thumbRect.height() / 2);
-        afterThumbRect = IntRect(trackRect.x(), thumbRect.y() + beforeThumbRect.height(), trackRect.width(), trackRect.bottom() - beforeThumbRect.bottom());
+        afterThumbRect = IntRect(trackRect.x(), trackRect.y() + beforeThumbRect.height(), trackRect.width(), trackRect.bottom() - beforeThumbRect.bottom());
     }
 }
 
